Migrate to general diagnostic system